--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,7 +1,5 @@
-<!--
-  <li>
-    <a href="http://link-to-whatever-social-network.com/user/" itemprop="sameAs" rel="nofollow noopener noreferrer me">
-      <i class="fas fa-fw" aria-hidden="true"></i> Custom Social Profile Link
-    </a>
-  </li>
--->
+<li>
+  <a href="https://bsky.app/profile/euroyoung.bsky.social" itemprop="sameAs" rel="nofollow noopener noreferrer me">
+    <i aria-hidden="true"></i><span class="label">Bluesky</span>
+  </a>
+</li>
