--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -67,7 +67,7 @@
       {% if author.twitter %}
         <li>
           <a href="https://twitter.com/{{ author.twitter }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
-            <i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i><span class="label">Twitter</span>
+            <i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i><span class="label">X</span>
           </a>
         </li>
       {% endif %}
